Media Remoting: Don't report remote renderer init error to pipeline.

When error occurs during initializing the remote renderer,
CourierRenderer should not report the failure to media pipeline.
Instead, it should always report success to the media pipeline, and
then become a no-op renderer after that point.  The remoting session
will soon end, and a normal local renderer will be created instead.

BUG=687750

Review-Url: https://codereview.chromium.org/2669033004
Cr-Commit-Position: refs/heads/master@{#447911}

Former-commit-id: fa3876bfc4b420d126b2a52f653b3bbb13944de5